--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -3,11 +3,10 @@ name: daily weather voice
 on:
   workflow_dispatch:
   schedule:
-  # 7:00 AM New York (EST/EDT 自动换算)
-  - cron: "0 12 * * *"
-
-  # 4:00 PM New York
-  - cron: "0 21 * * *"
+    # 7:00 AM New York = 12:00 UTC
+    - cron: "0 12 * * *"
+    # 4:00 PM New York = 21:00 UTC
+    - cron: "0 21 * * *"
 
 jobs:
   run:
@@ -27,22 +26,22 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt -v
 
-      - name: Run
+      - name: Run AM/PM (auto by UTC hour)
         env:
           VISUAL_CROSSING_API_KEY: ${{ secrets.VISUAL_CROSSING_API_KEY }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           LOCATION: ${{ secrets.LOCATION }}
-
           TZ_NAME: "America/New_York"
-          UNIT_GROUP: "us"
-          VC_LANG: "zh"
-
-          # 你现在用的
-          GEMINI_MODEL: "gemini-3-flash-preview"
         run: |
           set -euxo pipefail
+          # 根据触发时间自动选择 AM/PM
+          HOUR_UTC=$(date -u +%H)
+          if [ "$HOUR_UTC" = "12" ]; then
+            export RUN_MODE=AM
+          else
+            export RUN_MODE=PM
+          fi
           python app/main.py
 
       - name: Upload artifacts
