--- a/.github/workflows/telegram-trigger.yml
+++ b/.github/workflows/telegram-trigger.yml
@@ -3,12 +3,12 @@ name: Telegram Trigger
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/2 * * * *"   # 每2分钟检查一次
+    - cron: "*/2 * * * *"   # 每2分钟检查一次（GitHub schedule 可能会有延迟）
 
 jobs:
   check:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v4
@@ -19,15 +19,33 @@ jobs:
 
       - name: Install
         run: |
+          set -euxo pipefail
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt -v
 
-      - name: Check Telegram
+      # ✅ 用 cache 保存 offset（不需要写回仓库）
+      - name: Restore Telegram offset cache
+        uses: actions/cache@v4
+        with:
+          path: .tg_offset.txt
+          key: tg-offset-v1
+
+      - name: Check Telegram and trigger weather
         env:
           VISUAL_CROSSING_API_KEY: ${{ secrets.VISUAL_CROSSING_API_KEY }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           LOCATION: ${{ secrets.LOCATION }}
           TZ_NAME: "America/New_York"
+          # 让主程序知道这是即时触发（可选）
+          RUN_MODE: "AM"
         run: |
+          set -euxo pipefail
           python telegram_check.py
+
+      - name: Save Telegram offset cache
+        if: always()
+        uses: actions/cache@v4
+        with:
+          path: .tg_offset.txt
+          key: tg-offset-v1
